--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,26 @@
+astroid==2.2.5
 autopep8==1.4.4
+backcall==0.1.0
+colorama==0.4.1
+decorator==4.4.0
+ipdb==0.12
+ipython==7.6.1
+ipython-genutils==0.2.0
+isort==4.3.21
+jedi==0.14.1
+lazy-object-proxy==1.4.1
+mccabe==0.6.1
 numpy==1.17.2
+parso==0.5.1
+pickleshare==0.7.5
+Pillow==6.2.1
+prompt-toolkit==2.0.9
 pycodestyle==2.5.0
+Pygments==2.4.2
+pylint==2.3.1
+six==1.12.0
+traitlets==4.3.2
+typed-ast==1.4.0
+virtualenv==16.6.2
+wcwidth==0.1.7
+wrapt==1.11.2
